force-app/main/default/objects/Bug_Reporting__c/Bug_Reporting__c.object-meta.xml
<CustomObject>
    <label>Backlog Tracking</label>
    <nameField>
        <displayFormat>IS - {000}</displayFormat>
        <label>Bug Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlog Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>