force-app/main/default/objects/Bug_Reporting__c/fields/Alloacted_Dev__c.field-meta.xml
<CustomField>
    <fullName>Alloacted_Dev__c</fullName>
    <label>Alloacted Dev</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MDC</fullName>
            </value>
            <value>
                <fullName>GL</fullName>
            </value>
            <value>
                <fullName>JC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>