force-app/main/default/objects/Bug_Reporting__c/fields/Created_By_Frist_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Frist_Name__c</fullName>
    <formula>CreatedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Frist Name</label>
    <type>Text</type>
</CustomField>