force-app/main/default/objects/Bug_Reporting__c/fields/Description_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Issue__c</fullName>
    <label>Description of Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>