force-app/main/default/objects/Bug_Reporting__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Urgency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal (Can be resolved with Weeks)</fullName>
            </value>
            <value>
                <fullName>Urgent (Mission Critical Must be resolved with 2 Days)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>