force-app/main/default/objects/Bug_Reporting__c/fields/Will_Action__c.field-meta.xml
<CustomField>
    <fullName>Will_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will Action</label>
    <type>Checkbox</type>
</CustomField>