force-app/main/default/objects/Bug_Reporting__c/recordTypes/Bugs.recordType-meta.xml
<RecordType>
    <fullName>Bugs</fullName>
    <active>true</active>
    <label>Bugs</label>
</RecordType>