force-app/main/default/objects/Bug_Reporting__c/listViews/All_Backlog.listView-meta.xml
<ListView>
    <fullName>All_Backlog</fullName>
    <columns>NAME</columns>
    <columns>Backlog_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Description_of_Issue__c</columns>
    <columns>Urgency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Backlog</label>
</ListView>